<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.4</version>
        <relativePath></relativePath>
        <!-- lookup parent from repository -->
    </parent>

    <groupId>de.denktmit.webapp</groupId>
    <artifactId>aggregator</artifactId>
    <version>${revision}${sha1}${changelist}</version>
    <packaging>pom</packaging>
    <name>DenktMit eG :: Webapp :: Aggregator</name>
    <description>The DenktMit eG Webapp build aggregator</description>

    <modules>
        <module>test-util</module>
        <module>common</module>
        <module>persistence</module>
        <module>business</module>
        <module>web</module>
        <module>application</module>
        <module>e2e-tests</module>
        <module>build-reports</module>
    </modules>

    <properties>
        <changelist>-SNAPSHOT</changelist>
        <dir.project.root>${project.basedir}</dir.project.root>
        <dir.report.jacoco.aggregate>${dir.project.root}/build-reports/target/site/jacoco-aggregate-all</dir.report.jacoco.aggregate>
        <goals.jib.packageGoal>dockerBuild</goals.jib.packageGoal>
        <java.version>17</java.version>
        <kotlin.version>1.8.22</kotlin.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <revision>0.0.1</revision>
        <sha1></sha1>
        <skip.jooq-codegen>false</skip.jooq-codegen>
        <skip.reports.jacoco>false</skip.reports.jacoco>
        <!--suppress UnresolvedMavenProperty -->
        <skip.tests.all>${skipTests}</skip.tests.all>
        <skip.tests.e2e>${skip.tests.all}</skip.tests.e2e>
        <skip.tests.it>${skip.tests.all}</skip.tests.it>
        <skip.tests.unit>${skip.tests.all}</skip.tests.unit>
        <version.com.github.eirslett.frontend-maven-plugin>1.15.0</version.com.github.eirslett.frontend-maven-plugin>
        <version.com.github.ekryd.sortpom.sortpom-maven-plugin>3.3.0</version.com.github.ekryd.sortpom.sortpom-maven-plugin>
        <version.com.google.cloud.tools.jib-maven-plugin>3.4.0</version.com.google.cloud.tools.jib-maven-plugin>
        <version.com.ninja-squad.springmockk>4.0.2</version.com.ninja-squad.springmockk>
        <version.io.hypersistence.hypersistence-utils-hibernate-62>3.6.0</version.io.hypersistence.hypersistence-utils-hibernate-62>
        <version.nl.jqno.equalsverifier.equalsverifier>3.15.6</version.nl.jqno.equalsverifier.equalsverifier>
        <version.org.asciidoctor.asciidoctor-maven-plugin>2.2.4</version.org.asciidoctor.asciidoctor-maven-plugin>
        <version.org.codehaus.mojo.flatten-maven-plugin>1.5.0</version.org.codehaus.mojo.flatten-maven-plugin>
        <version.org.codehaus.mojo.properties-maven-plugin>1.2.1</version.org.codehaus.mojo.properties-maven-plugin>
        <version.org.jacoco.jacoco-maven-plugin>0.8.11</version.org.jacoco.jacoco-maven-plugin>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>business</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>persistence</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>test-util</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>web</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.hypersistence</groupId>
                <artifactId>hypersistence-utils-hibernate-62</artifactId>
                <version>${version.io.hypersistence.hypersistence-utils-hibernate-62}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>persistence</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.ninja-squad</groupId>
                <artifactId>springmockk</artifactId>
                <version>${version.com.ninja-squad.springmockk}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>nl.jqno.equalsverifier</groupId>
                <artifactId>equalsverifier</artifactId>
                <version>${version.nl.jqno.equalsverifier.equalsverifier}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.github.eirslett</groupId>
                    <artifactId>frontend-maven-plugin</artifactId>
                    <version>${version.com.github.eirslett.frontend-maven-plugin}</version>
                </plugin>
                <plugin>
                    <groupId>com.github.ekryd.sortpom</groupId>
                    <artifactId>sortpom-maven-plugin</artifactId>
                    <version>${version.com.github.ekryd.sortpom.sortpom-maven-plugin}</version>
                    <configuration>
                        <createBackupFile>false</createBackupFile>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <keepBlankLines>true</keepBlankLines>
                        <lineSeparator>\n</lineSeparator>
                        <nrOfIndentSpace>4</nrOfIndentSpace>
                        <predefinedSortOrder>custom_1</predefinedSortOrder>
                        <sortDependencies>scope,groupId,artifactId</sortDependencies>
                        <sortProperties>true</sortProperties>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>sort</goal>
                            </goals>
                            <phase>initialize</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>${version.com.google.cloud.tools.jib-maven-plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <parameters>true</parameters>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <configuration>
                        <includes>
                            <include>**/*IT.java</include>
                        </includes>
                        <!-- Adds argument to VM to trigger JaCoCo Agents to run for unit tests -->
                        <argLine>${failsafeArgLine}</argLine>
                        <!--                        <argLine>-XX:+EnableDynamicAgentLoading</argLine>-->
                        <skipTests>${skip.tests.it}</skipTests>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <!-- Adds argument to VM to trigger JaCoCo Agents to run for integration tests -->
                        <argLine>${surefireArgLine}</argLine>
                        <!--                        <argLine>-XX:+EnableDynamicAgentLoading</argLine>-->
                        <skipTests>${skip.tests.unit}</skipTests>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.asciidoctor</groupId>
                    <artifactId>asciidoctor-maven-plugin</artifactId>
                    <version>${version.org.asciidoctor.asciidoctor-maven-plugin}</version>
                    <configuration>
                        <sourceDirectory>src/main/asciidoc</sourceDirectory>
                        <outputDirectory>target/generated-docs</outputDirectory>
                    </configuration>
                    <executions>
                        <execution>
                            <id>asciidoc</id>
                            <goals>
                                <goal>process-asciidoc</goal>
                            </goals>
                            <phase>generate-resources</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>${version.org.codehaus.mojo.flatten-maven-plugin}</version>
                    <configuration>
                        <updatePomFile>true</updatePomFile>
                        <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    </configuration>
                    <executions>
                        <execution>
                            <id>flatten</id>
                            <goals>
                                <goal>flatten</goal>
                            </goals>
                            <phase>process-resources</phase>
                        </execution>
                        <execution>
                            <id>flatten.clean</id>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                            <phase>clean</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>properties-maven-plugin</artifactId>
                    <version>${version.org.codehaus.mojo.properties-maven-plugin}</version>
                    <configuration>
                        <files>
                            <file>${dir.project.root}/.env-dev</file>
                        </files>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>read-project-properties</goal>
                            </goals>
                            <phase>initialize</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${version.org.jacoco.jacoco-maven-plugin}</version>
                    <configuration>
                        <skip>${skip.reports.jacoco}</skip>
                        <excludes>
                            <exclude>de/denktmit/webapp/jooq/generated/**</exclude>
                        </excludes>
                    </configuration>
                    <executions>
                        <execution>
                            <id>prepare-agent</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                            <configuration>
                                <propertyName>surefireArgLine</propertyName>
                            </configuration>
                        </execution>
                        <execution>
                            <id>prepare-agent-integration</id>
                            <goals>
                                <goal>prepare-agent-integration</goal>
                            </goals>
                            <configuration>
                                <propertyName>failsafeArgLine</propertyName>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <configuration>
                        <jvmTarget>${java.version}</jvmTarget>
                        <args>
                            <arg>-Xjsr305=strict</arg>
                            <arg>-java-parameters</arg>
                        </args>
                        <compilerPlugins>
                            <plugin>spring</plugin>
                            <plugin>jpa</plugin>
                        </compilerPlugins>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.jetbrains.kotlin</groupId>
                            <artifactId>kotlin-maven-allopen</artifactId>
                            <version>${kotlin.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.jetbrains.kotlin</groupId>
                            <artifactId>kotlin-maven-noarg</artifactId>
                            <version>${kotlin.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>${version.org.codehaus.mojo.properties-maven-plugin}</version>
            </plugin>
            <plugin>
                <groupId>com.github.ekryd.sortpom</groupId>
                <artifactId>sortpom-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.asciidoctor</groupId>
                <artifactId>asciidoctor-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
    <url>https://spring.io/projects/spring-boot/aggregator/application</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>DenktMit eG</name>
            <email>hallo@denktmit.de</email>
            <organizationUrl>https://denktmit.de</organizationUrl>
        </developer>
    </developers>

    <profiles>
        <profile>
            <id>ci</id>
            <properties>
                <goals.jib.packageGoal>build</goals.jib.packageGoal>
                <skip.jooq-codegen>true</skip.jooq-codegen>
                <skip.tests.all>false</skip.tests.all>
                <skip.tests.e2e>true</skip.tests.e2e>
            </properties>
        </profile>
        <profile>
            <id>e2e</id>
            <properties>
                <goals.jib.packageGoal>build</goals.jib.packageGoal>
                <skip.tests.e2e>false</skip.tests.e2e>
            </properties>
        </profile>
    </profiles>

</project>
